fix tss1,tss2 layout

--- a/1_1_tdc.html
+++ b/1_1_tdc.html
@@ -28,29 +28,29 @@
 		</div>
         <div class="main">
  			<div class="main-content  ">
-				<div class="flex-box half-height">
-					<div class="flex-item">
+				<div class="half-height" style="width: 1200px;  margin: auto;">
+					<div class="width-1-3">
 					  <a class="image-wrapper" href="tdc_1.html">
-					    <div class="waik"><img src="./images/tdc/tdc_i1.jpg"></div><p class="title">大连城市物流共同配送中心</p>
+					    <div class=""><img src="./images/tdc/tdc_i1.jpg"></div><p class="title">大连城市物流共同配送中心</p>
 					  </a>
 					</div>
-					<div class="flex-item">
-					<a href="tdc_3.html" class="image-wrapper " > <div class="waik"><img src="./images/tdc/tdc_i2.jpg"></div><p>沙河口城市配送中心</p> </a>
+					<div class="width-1-3">
+					<a href="tdc_3.html" class="image-wrapper " > <div class=""><img src="./images/tdc/tdc_i2.jpg"></div><p>沙河口城市配送中心</p> </a>
 					</div>
-					<div class="flex-item">
-					<a href="tdc_4.html" class="image-wrapper" ><div class="waik"> <img src="./images/tdc/tdc_i3.jpg"></div><p>金桥物流基地 </p></a>
+					<div class="width-1-3">
+					<a href="tdc_4.html" class="image-wrapper" ><div class=""> <img src="./images/tdc/tdc_i3.jpg"></div><p>金桥物流基地 </p></a>
 					</div>
 				</div>
-				<div class="flex-box half-height">
+				<div class="half-height" style="width: 1200px;  margin: auto;">
 
- 					<div class="flex-item">
-					<a href="tdc_5.html" class="image-wrapper" > <div class="waik"><img src="./images/tdc/tdc_i4.jpg"></div><p>金桥北汽配园区 </p></a>
+ 					<div class="width-1-3">
+					<a href="tdc_5.html" class="image-wrapper" > <div class=""><img src="./images/tdc/tdc_i4.jpg"></div><p>金桥北汽配园区 </p></a>
 					</div>
-					<div class="flex-item">
-					<a href="tdc_6.html" class="image-wrapper" > <div class="waik"><img src="./images/tdc/tdc_i5.jpg"></div><p>周水子钢材市场</p> </a>
+					<div class="width-1-3">
+					<a href="tdc_6.html" class="image-wrapper" > <div class=""><img src="./images/tdc/tdc_i5.jpg"></div><p>周水子钢材市场</p> </a>
 					</div>
-					<div class="flex-item">
-					<a href="tdc_7.html" class="image-wrapper" > <div class="waik"><img src="./images/tdc/tdc_i6.jpg"></div><p>革镇堡木材市场 </p></a>
+					<div class="width-1-3">
+					<a href="tdc_7.html" class="image-wrapper" > <div class=""><img src="./images/tdc/tdc_i6.jpg"></div><p>革镇堡木材市场 </p></a>
 					</div>
 				</div>
 
