--- a/1_1_tss2.html
+++ b/1_1_tss2.html
@@ -23,26 +23,26 @@
 		</div>
         <div class="main">
  			<div class="main-content  ">
-				<div class="flex-box half-height" style="    width: 900px;margin: auto;">
-					<div class="flex-item">
+				<div class="half-height" style="    width: 900px;margin: auto;">
+					<div class="width-1-3">
 					  <a class="image-wrapper" href="tss_9.html">
 					    <div class="waik"><img src="./images/tss/ooimg_03.png"></div><p class="title">车站商服</p>
 					  </a>
 					</div>
-					<div class="flex-item">
+					<div class="width-1-3">
 					<a href="tss_10.html" class="image-wrapper" > <div class="waik"><img src="./images/tss/ooimg_06.png"></div><p>大连火车头体育场</p> </a>
 					</div>
-					<div class="flex-item">
+					<div class="width-1-3">
 					<a href="tss_11.html" class="image-wrapper" ><div class="waik"> <img src="./images/tss/ooimg_09.png"></div><p>出租车公司 </p></a>
 					</div>
-					
-				</div>
-				<div class="flex-box half-height" style="        width: 600px; margin: auto;">
 
- 					<div class="flex-item">
+				</div>
+				<div class="flex-box half-height" style="width: 600px; margin: auto;">
+
+ 					<div class="width-1-2">
 					<a href="tss_12.html" class="image-wrapper" > <div class="waik"><img src="./images/tss/ooimg_15.png"></div><p>资产运营 </p></a>
 					</div>
-					<div class="flex-item">
+					<div class="width-1-2">
 					<a href="tss_13.html" class="image-wrapper" > <div class="waik"><img src="./images/tss/ooimg_18.png"></div><p>旅顺龙头生态种植养殖基地</p> </a>
 					</div>
 
