--- a/1_profile.html
+++ b/1_profile.html
@@ -25,7 +25,7 @@
       </div>
     </div>
 
-    <div class="main" style="min-height:80%">
+    <div class="main" style="">
       <div class="main-content">
 
         <div class="row" id="wlsp">
