--- a/culture_1.html
+++ b/culture_1.html
@@ -25,7 +25,7 @@
       </div>
     </div>
 
-    <div class="main" style="min-height:80%">
+    <div class="main" style="">
       <div class="main-content">
 
         <div class="row" id="wlsp">
@@ -42,7 +42,7 @@
 ——企业发展将海纳百川、搏击前行。
 
 
-               
+
               </p>
 
             </div>
