--- a/tss_8.html
+++ b/tss_8.html
@@ -2,124 +2,200 @@
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>熊岳城疗养院</title>
-  <link href="Styles/bootstrap.min.css" rel="stylesheet" type="text/css" />
-  <link href="Styles/swiper.min.css" rel="stylesheet" type="text/css" />
-  <link href="Styles/animate.min.css" rel="stylesheet" type="text/css" />
-  <link href="Styles/video-js.min.css" rel="stylesheet" type="text/css" />
-  <link href="Styles/lightbox.min.css" rel="stylesheet" type="text/css" />
-  <link href="Styles/jplayer.blue.monday.min.css" rel="stylesheet" type="text/css" />
-  <link href="Styles/app.css" rel="stylesheet" type="text/css" />
+    <meta charset="utf-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>熊岳城疗养院</title>
+    <link href="Styles/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+    <link href="Styles/swiper.min.css" rel="stylesheet" type="text/css"/>
+    <link href="Styles/animate.min.css" rel="stylesheet" type="text/css"/>
+    <link href="Styles/video-js.min.css" rel="stylesheet" type="text/css"/>
+    <link href="Styles/lightbox.min.css" rel="stylesheet" type="text/css"/>
+    <link href="Styles/jplayer.blue.monday.min.css" rel="stylesheet" type="text/css"/>
+    <link href="Styles/app.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
-  <div class="page  tdc-detail">
+<div class="page  tdc-detail">
     <div class="container">
-      <div class="logo"> <img src="./images/tss_logo.png"> </div>
-      <div class="row" id="zlogo">
-        <div class="col-md-4"></div>
-        <div class="col-md-4"><img src="./images/tss_head.png"></div>
-        <div class="col-md-4"></div>
-      </div>
+        <div class="logo"><img src="./images/tss_logo.png"></div>
+        <div class="row" id="zlogo">
+            <div class="col-md-4"></div>
+            <div class="col-md-4"><img src="./images/tss_head.png"></div>
+            <div class="col-md-4"></div>
+        </div>
     </div>
 
     <div class="main">
-      <div class="main-content">
+        <div class="main-content">
 
-        <div class="row" id="wlsp">
-          <div class="col-md-3 leftpart">
-            <div class="titlepart">
-              <h3>熊岳城疗养院</h3>
-              <img src="./images/tiao_03.png" style="margin: 0 0 50px;">
-            </div>
-            <div class=" bodypart">
-              <p class="desc typing-ani">
-                <span class="text">位于营口鲅鱼圈区熊岳城镇温泉村，有190间不同标准的客房。所有房间的用水，都来自地下深层的天然温泉，让人们随时享受大自然的恩赐。天然温泉水含有多种对人体有益的微量元素，尤以对医疗和健美皮肤有特殊功效的硫磺元素为最。露天温泉包房、台球、卡拉ok厅等多种娱乐设施，满足您一站式的健康休闲之旅。</span>
-                </span>
-              </p>
-            </div>
-          </div>
-          <div class="col-md-9 rightpart" >
-            <div class="titlepart">
-            </div>
-            <div id="image_list" class=" bodypart">
-              <div class="grid" style="display:none;">
-                <a href="images/tss8/img7_03.png" data-lightbox="lightbox" > <img src="./images/tss8/img7_03.png" class=" width-1-2"> </a>
-                <div class=" width-2-2">
-                  <a href="images/tss8/img7_05.png" data-lightbox="lightbox" ><img src="./images/tss8/img7_05.png"> </a>
-                  <div style="margin-top: 16px">
-                    <a href="images/tss8/img7_10.png" data-lightbox="lightbox" ><img src="./images/tss8/img7_10.png" class="width-1-2"> </a>
-                    <a href="images/tss8/img7_13.png" data-lightbox="lightbox" ><img src="./images/tss8/img7_13.png" class="width-2-2"> </a>
-                  </div>
-
+            <div class="row" id="wlsp">
+                <div class="col-md-3 leftpart">
+                    <div class="titlepart">
+                        <h3>熊岳城疗养院</h3>
+                        <img src="./images/tiao_03.png" style="margin: 0 0 50px;">
+                    </div>
+                    <div class=" bodypart">
+                        <p class="desc typing-ani">
+                            <span class="text">位于营口鲅鱼圈区熊岳城镇温泉村，有190间不同标准的客房。所有房间的用水，都来自地下深层的天然温泉，让人们随时享受大自然的恩赐。天然温泉水含有多种对人体有益的微量元素，尤以对医疗和健美皮肤有特殊功效的硫磺元素为最。露天温泉包房、台球、卡拉ok厅等多种娱乐设施，满足您一站式的健康休闲之旅。</span>
+                            </span>
+                        </p>
+                    </div>
                 </div>
-              </div>
-              <div class="swiper swiper-container">
-                <div class="swiper-wrapper">
-                  <div class="swiper-slide">	<img src="images/tss8/img7_03.png">	</div>
-                  <div class="swiper-slide">	<img src="images/tss8/img7_05.png">	</div>
-                  <div class="swiper-slide">	<img src="images/tss8/img7_10.png">	</div>
-                  <div class="swiper-slide">	<img src="images/tss8/img7_13.png">	</div>
+                <div class="col-md-9 rightpart">
+                    <div class="titlepart">
+                    </div>
+                    <div id="image_list" class=" bodypart">
+                        <div class="grid" style="display:none;">
+                            <div class="col2-60b-left" style=""> <!--左边60%-->
+                                <div class="lin2-25b-top"> <!--左边上25%-->
+                                    <div class="lin2-25b-top-3col"> <!--左上3列-->
+                                        <a href="images/tss8/img7_10.png" data-lightbox="lightbox"><img
+                                                src="./images/tss8/img7_10.png" class=""
+                                                style="width:100%; height:117px;"></a>
+                                    </div>
+                                    <div class="lin2-25b-top-3col"> <!--左上3列-->
+                                        <a href="images/tss8/img7_10.png" data-lightbox="lightbox"><img
+                                                src="./images/tss8/img7_10.png" class=""
+                                                style="width:100%; height: 117px;"></a>
+                                    </div>
+                                    <div class="" style=" width: 33.33%; height: 100%; float: left; overflow: hidden;">
+                                        <!--左上3列-->
+                                        <a href="images/tss8/img7_10.png" data-lightbox="lightbox"><img
+                                                src="./images/tss8/img7_10.png" class=""
+                                                style="width:100%; height: 117px; float: right;"></a>
+                                    </div>
+                                </div>
+                                <div class="lin2-75b-foot"> <!--左边下75%-->
+                                    <a href="images/tss8/img7_03.png" data-lightbox="lightbox"><img
+                                            src="./images/tss8/img7_03.png" class=""
+                                            style="width:100%; height: 350px; "></a>
+                                </div>
+                            </div>
+
+                            <div class="col2-40b-right" style=""> <!--右边40%-->
+                                <div class="col2-40b-right-1lin">  <!--右第一行-->
+                                    <div style="float: left;width: 50%;">
+                                        <a href="images/tss8/img7_10.png" data-lightbox="lightbox"><img
+                                                src="./images/tss8/img7_10.png" class=""
+                                                style=" height: 117px;padding: 0 5px 0 0; "></a>
+                                    </div>
+                                    <div style="float: left;width: 50%;">
+                                        <a href="images/tss8/img7_10.png" data-lightbox="lightbox"><img
+                                                src="./images/tss8/img7_10.png" class=""
+                                                style=" height: 117px;padding: 0 0 0 5px;"></a>
+                                    </div>
+                                </div>
+                                <div class="col2-40b-right-1lin">  <!--右第一行-->
+                                    <div style="float: left;width: 50%;">
+                                        <a href="images/tss8/img7_10.png" data-lightbox="lightbox"><img
+                                                src="./images/tss8/img7_10.png" class=""
+                                                style=" height: 117px;padding: 0 5px 0 0;"></a>
+                                    </div>
+                                    <div style="float: left;width: 50%;">
+                                        <a href="images/tss8/img7_10.png" data-lightbox="lightbox"><img
+                                                src="./images/tss8/img7_10.png" class=""
+                                                style=" height: 117px;padding: 0 0 0 5px;"></a>
+                                    </div>
+                                </div>
+                                <div class="col2-40b-right-1lin">  <!--右第一行-->
+                                    <div style="float: left;width: 50%;">
+                                        <a href="images/tss8/img7_10.png" data-lightbox="lightbox"><img
+                                                src="./images/tss8/img7_10.png" class=""
+                                                style="height: 117px;padding: 0 5px 0 0;"></a>
+                                    </div>
+                                    <div style="float: left;width: 50%;">
+                                        <a href="images/tss8/img7_10.png" data-lightbox="lightbox"><img
+                                                src="./images/tss8/img7_10.png" class=""
+                                                style=" height: 117px;padding: 0 0 0 5px;"></a>
+                                    </div>
+                                </div>
+                                <div style="width: 100%">  <!--右第一行-->
+                                    <a href="images/tss8/img7_10.png" data-lightbox="lightbox"><img
+                                            src="./images/tss8/img7_10.png" class=""
+                                            style=" height: 96px;"></a>
+                                </div>
+
+                            </div>
+                            <!--<a href="images/tss8/img7_03.png" data-lightbox="lightbox"> <img src="./images/tss8/img7_03.png" class=" width-1-2"> </a>-->
+                            <!--<div class=" width-2-2">-->
+                            <!--<a href="images/tss8/img7_05.png" data-lightbox="lightbox"><img src="./images/tss8/img7_05.png"> </a>-->
+                            <!--<div style="margin-top: 16px">-->
+                            <!--<a href="images/tss8/img7_10.png" data-lightbox="lightbox"><img-->
+                            <!--src="./images/tss8/img7_10.png" class="width-1-2"> </a>-->
+                            <!--<a href="images/tss8/img7_13.png" data-lightbox="lightbox"><img-->
+                            <!--src="./images/tss8/img7_13.png" class="width-2-2"> </a>-->
+                            <!--</div>-->
+
+                            <!--</div>-->
+                        </div>
+                        <div class="swiper swiper-container">
+                            <div class="swiper-wrapper">
+                                <div class="swiper-slide"><img src="images/tss8/img7_03.png"></div>
+                                <div class="swiper-slide"><img src="images/tss8/img7_05.png"></div>
+                                <div class="swiper-slide"><img src="images/tss8/img7_10.png"></div>
+                                <div class="swiper-slide"><img src="images/tss8/img7_13.png"></div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-              </div>
+
+
             </div>
-          </div>
-
-
         </div>
-      </div>
     </div>
 
     <nav id="footer" class="  navbar navbar-default navbar-fixed-bottom">
-      <div class="content">
-        <div class="col-md-3 leftpart">
-          <a class="play-video-btn ctl_btn" href="javascript:void(0)" data-toggle="modal" data-target="#myModal" >
-            <span class="glyphicon glyphicon-film" aria-hidden="true"></span>
-            <span>		视频 </span>
-          </a>
-        </div>
+        <div class="content">
+            <div class="col-md-3 leftpart">
+                <a class="play-video-btn ctl_btn" href="javascript:void(0)" data-toggle="modal" data-target="#myModal">
+                    <span class="glyphicon glyphicon-film" aria-hidden="true"></span>
+                    <span>		视频 </span>
+                </a>
+            </div>
 
-        <div class="col-md-9 rightpart" >
-          <div class="pull-right">
-            <a class="back-btn ctl_btn" href="javascript:void(0)" onclick="javascript:window.history.back();"> 返回 </a>
-            <a class="back-home-btn ctl_btn" href="index.html"> 主页  </a>
-            <a class="play-audio-btn ctl_btn" href="javascript:void(0)"><span class="glyphicon glyphicon-volume-up" aria-hidden="true"></span> </a>
-            <audio id="audio-js" autoplay="true" class="audio-js">
-              <source src="audios/male/tdc_1.mp3" type="audio/mpeg" />
-            </audio>
-          </div>
+            <div class="col-md-9 rightpart">
+                <div class="pull-right">
+                    <a class="back-btn ctl_btn" href="javascript:void(0)" onclick="javascript:window.history.back();">
+                        返回 </a>
+                    <a class="back-home-btn ctl_btn" href="index.html"> 主页 </a>
+                    <a class="play-audio-btn ctl_btn" href="javascript:void(0)"><span
+                            class="glyphicon glyphicon-volume-up" aria-hidden="true"></span> </a>
+                    <audio id="audio-js" autoplay="true" class="audio-js">
+                        <source src="audios/male/tdc_1.mp3" type="audio/mpeg"/>
+                    </audio>
+                </div>
+            </div>
         </div>
-      </div>
     </nav>
 
     <!-- Modal -->
     <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <div class="clearfix">
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span></button>
-          </div>
-          <div class="modal-body">
-            <video class="video-js" data-setup='{"controls": true, "autoplay": false, "preload": "auto", "fluid": true}'>
-              <source src="videos/sample.mp4" type="video/mp4"/>
-              <source src="videos/sample.webm" type="video/webm"/>
-            </video>
-          </div>
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="clearfix">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                            class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span></button>
+                </div>
+                <div class="modal-body">
+                    <video class="video-js"
+                           data-setup='{"controls": true, "autoplay": false, "preload": "auto", "fluid": true}'>
+                        <source src="videos/sample.mp4" type="video/mp4"/>
+                        <source src="videos/sample.webm" type="video/webm"/>
+                    </video>
+                </div>
+            </div>
         </div>
-      </div>
     </div>
 
-  </div>
-  <script src="scripts/jquery-1.9.1.min.js"></script>
-  <script src="scripts/bootstrap.min.js"></script>
-  <script src="scripts/jquery.jplayer.min.js"></script>
-  <script src="scripts/swiper.jquery.min.js"></script>
-  <script src="scripts/swiper.animate.min.js"></script>
-  <script src="scripts/video.min.js"></script>
-  <script src="scripts/lightbox.min.js"></script>
-  <script src="scripts/typing-animate.js"></script>
-  <script src="scripts/app.js"></script>
+</div>
+<script src="scripts/jquery-1.9.1.min.js"></script>
+<script src="scripts/bootstrap.min.js"></script>
+<script src="scripts/jquery.jplayer.min.js"></script>
+<script src="scripts/swiper.jquery.min.js"></script>
+<script src="scripts/swiper.animate.min.js"></script>
+<script src="scripts/video.min.js"></script>
+<script src="scripts/lightbox.min.js"></script>
+<script src="scripts/typing-animate.js"></script>
+<script src="scripts/app.js"></script>
 </body>
 </html>
