--- a/tss_1.html
+++ b/tss_1.html
@@ -48,18 +48,59 @@
             <div class="titlepart">
             </div>
             <div id="image_list" class=" bodypart">
-              <div class="grid" style="display:none;">
-                <ul class="xul">
-                  <li><a href="images/tss1/i2.jpg" data-lightbox="lightbox" ><img src="./images/tss1/i2_s.png"> </a></li>
-                  <li><a href="images/tss1/i5.jpg" data-lightbox="lightbox" ><img src="./images/tss1/i5_s.png"> </a></li>
-                  <li><a href="images/tss1/i3.jpg" data-lightbox="lightbox" ><img src="./images/tss1/i3_s.png"> </a></li>
-                  <li><a href="images/tss1/i4.jpg" data-lightbox="lightbox" ><img src="./images/tss1/i4_s.png"> </a></li>
-                  <li class="ximg2"><a href="images/tss1/i6.jpg" data-lightbox="lightbox" ><img src="./images/tss1/i6_s.png"> </a></li>
-                  <li class="ximg5"><a href="images/tss1/i1.jpg" data-lightbox="lightbox" ><img src="./images/tss1/i1_s.png"> </a></li>
-                  <li class="ximg2"><a href="images/tss1/i7.jpg" data-lightbox="lightbox" ><img src="./images/tss1/i7_s.png"> </a></li>
-                  <li class="ximg2" style="    position: absolute;right: 0px;float: right!important;top: 54%;width: 17%;"><a href="images/tss1/i8.jpg" data-lightbox="lightbox" ><img src="./images/tss1/i8_s.png"></a></li>
-                  <li class="ximg2" style="    position: absolute;right: 0px;float: right!important;top: 81%;width: 17%;"><a href="images/tss1/i9.jpg" data-lightbox="lightbox" ><img src="./images/tss1/i9_s.png"></a></li>
-                </ul>
+              <div class="grid" style="display:none; height: 100%;">
+                            <div class="col2-80b-left" style=""> <!--左边60%-->
+                                <div class="lin2-25b-top"> <!--左边上25%-->
+                                    <div class="lin2-25b-top-4col"> <!--左上3列-->
+                                        <a href="images/tss1/i2.jpg" data-lightbox="lightbox"><img
+                                                src="./images/tss1/i2.jpg" class=""
+                                                style="width:100%; height:117px;"></a>
+                                    </div>
+                                    <div class="lin2-25b-top-4col"> <!--左上3列-->
+                                        <a href="images/tss1/i5.jpg" data-lightbox="lightbox"><img
+                                                src="./images/tss1/i5.jpg" class=""
+                                                style="width:100%; height: 117px;"></a>
+                                    </div>
+                                    <div class="lin2-25b-top-4col"> <!--左上3列-->
+                                        <a href="images/tss1/i3.jpg" data-lightbox="lightbox"><img
+                                                src="./images/tss1/i3.jpg" class=""
+                                                style="width:100%; height: 117px;"></a>
+                                    </div>
+                                    <div class="" style=" width: 25%; height: 100%; float: left; overflow: hidden;">
+                                        <a href="images/tss1/i4.jpg" data-lightbox="lightbox"><img
+                                                src="./images/tss1/i4.jpg" class=""
+                                                style="width:100%; height: 117px; float: right;"></a>
+                                    </div>
+                                </div>
+                                <div class="lin2-75b-foot"> <!--左边下75%-->
+                                    <a href="images/tss1/i7.jpg" data-lightbox="lightbox"><img
+                                            src="./images/tss1/i7.jpg" class=""
+                                            style="width:100%; height: 350px; "></a>
+                                </div>
+                            </div>
+
+                            <div class="col2-20b-right" style=""> <!--右边20%-->
+                                <div class="col2-20b-right-1lin">  <!--右第一行-->
+                                        <a href="images/tss1/i6.jpg" data-lightbox="lightbox"><img
+                                                src="./images/tss1/i6.jpg" class=""
+                                                style=" height: 107px;"></a>
+                                </div>
+                                <div class="col2-20b-right-1lin">  <!--右第一行-->
+                                        <a href="images/tss1/i8.jpg" data-lightbox="lightbox"><img
+                                                src="./images/tss1/i8.jpg" class=""
+                                                style=" height: 107px;"></a>
+                                </div>
+                                <div class="col2-20b-right-1lin">  <!--右第一行-->
+                                        <a href="images/tss1/i9.jpg" data-lightbox="lightbox"><img
+                                                src="./images/tss1/i9.jpg" class=""
+                                                style=" height: 107px;"></a>
+                                </div>
+                                <div class="col2-20b-right-1lin">  <!--右第一行-->
+                                        <a href="images/tss1/i7.jpg" data-lightbox="lightbox"><img
+                                                src="./images/tss1/i7.jpg" class=""
+                                                style=" height: 115px;"></a>
+                                </div>
+                            </div>
               </div>
               <div class="swiper swiper-container">
                 <div class="swiper-wrapper">
@@ -90,34 +131,39 @@
           </a>
         </div>
 
-        <div class="col-md-9 rightpart" >
-          <div class="pull-right">
-            <a class="back-btn ctl_btn" href="javascript:void(0)" onclick="javascript:window.history.back();"> 返回 </a>
-            <a class="back-home-btn ctl_btn" href="index.html"> 主页  </a>
-            <a class="play-audio-btn ctl_btn" href="javascript:void(0)"><span class="glyphicon glyphicon-volume-up" aria-hidden="true"></span> </a>
-            <audio id="audio-js" autoplay="true" class="audio-js">
-              <source src="audios/tss1.ogg" type="audio/ogg" />
-            </audio>
-          </div>
+            <div class="col-md-9 rightpart">
+                <div class="pull-right">
+                    <a class="back-btn ctl_btn" href="javascript:void(0)" onclick="javascript:window.history.back();">
+                        返回 </a>
+                    <a class="back-home-btn ctl_btn" href="index.html"> 主页 </a>
+                    <a class="play-audio-btn ctl_btn" href="javascript:void(0)"><span
+                            class="glyphicon glyphicon-volume-up" aria-hidden="true"></span> </a>
+                    <audio id="audio-js" autoplay="true" class="audio-js">
+                        <source src="audios/male/tdc_1.mp3" type="audio/mpeg"/>
+                    </audio>
+                </div>
+            </div>
         </div>
-      </div>
     </nav>
 
 
     <!-- Modal -->
     <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <div class="clearfix">
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span></button>
-          </div>
-          <div class="modal-body">
-            <video class="video-js" data-setup='{"controls": true, "autoplay": false, "preload": "auto", "fluid": true}'>
-               <source src="videos/tss_1_1896.webm" type="video/webm"/>
-            </video>
-          </div>
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="clearfix">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                            class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span></button>
+                </div>
+                <div class="modal-body">
+                    <video class="video-js"
+                           data-setup='{"controls": true, "autoplay": false, "preload": "auto", "fluid": true}'>
+                        <source src="videos/sample.mp4" type="video/mp4"/>
+                        <source src="videos/sample.webm" type="video/webm"/>
+                    </video>
+                </div>
+            </div>
         </div>
-      </div>
     </div>
   </div>
   <script src="scripts/jquery-1.9.1.min.js"></script>
