--- a/1_culture.html
+++ b/1_culture.html
@@ -42,13 +42,20 @@
             </div>
         </div>
 
-        <!-- <div>
-            <a href="index.html"> 首页 </a>
-            <a class="back_btn" onclick="javascript:window.history.back();"> 返回 </a>
-
-        </div> -->
-
     </div>
+
+    <nav id="footer" class="  navbar navbar-default navbar-fixed-bottom">
+      <div class="container">
+      <div class="row " >
+        <div class="col-md-3"></div>
+        <div class="col-md-9">
+          <div class="pull-right">
+          <a class="back-btn ctl_btn" href="javascript:void(0)" onclick="javascript:window.history.back();"> 返回 </a>
+          <a class="back-home-btn ctl_btn" href="index.html"> 主页  </a>
+          </div>
+        </div>
+      </div>
+    </nav>
   </div>
   <script src="scripts/jquery-1.9.1.min.js"></script>
   <script src="scripts/bootstrap.min.js"></script>
