修正 b1, 点击图片无法打开大图

--- a/tss_5.html
+++ b/tss_5.html
@@ -100,10 +100,9 @@
 
               <div class="swiper swiper-container">
                 <div class="swiper-wrapper">
-                  <div class="swiper-slide">	<img src="images/tss5/img11_03.png">	</div>
-                  <div class="swiper-slide">	<img src="images/tss5/img11_06.png">	</div>
-                  <div class="swiper-slide">	<img src="images/tss5/img11_09.png">	</div>
-				  <div class="swiper-slide">	<img src="images/tss5/img11_09.png">	</div>
+                  <div class="swiper-slide">	<img src="images/tss5/i1.jpg">	</div>
+                  <div class="swiper-slide">	<img src="images/tss5/i2.jpg">	</div>
+                  <div class="swiper-slide">	<img src="images/tss5/i1.jpg">	</div>
                 </div>
               </div>
             </div>
