--- a/1_profile.html
+++ b/1_profile.html
@@ -56,7 +56,7 @@
                 <a href="images/profile/c1.jpg" data-lightbox="lightbox" > <img src="./images/profile/c1_s.png" class="imgdd"> </a>
                 <a href="images/profile/c3.jpg" data-lightbox="lightbox" ><img src="./images/profile/c3_s.png" class="imgdd"> </a>
                 <a href="images/profile/c4.jpg" data-lightbox="lightbox" ><img src="./images/profile/c4_s.png" class="imgdd"> </a>
-                <a href="images/profile/c2.png" data-lightbox="lightbox" ><img src="./images/profile/c2_s.png" class="imgdd"> </a>
+                <a href="images/profile/c2.jpg" data-lightbox="lightbox" ><img src="./images/profile/c2_s.png" class="imgdd"> </a>
               </div>
               <div style="width:88%;height:1px;background:#fff;margin:30px  0 0 9px;"></div>
               <div class="titlepart" style="width:45%;margin-left:0%;position: relative;height:55px">
