--- a/culture_4.html
+++ b/culture_4.html
@@ -35,7 +35,7 @@
               <img src="./images/tiao_03.png" style="margin: 0 0 50px;">
             </div>
             <div style="width:100%;text-align:center">
-              <img src="./images/culture/zhigeimg_07.png" style="width:80%;margin-top:80px;">
+              <img src="./images/culture/zhigeimg_07.png" style="margin-top:80px;">
             </div>
 
 
