--- a/culture_3.html
+++ b/culture_3.html
@@ -30,7 +30,7 @@
 
         <div class="row" id="wlsp">
           <div class="col-md-12 leftpart">
-            <ul class="leftpartqq polaroids">
+            <ul class="leftpartqq polaroids clearfix">
               <li>
                 <div>
                   <div class="titlepart1">
