--- a/tdc_3.html
+++ b/tdc_3.html
@@ -2,123 +2,139 @@
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>沙河口城市配送中心</title>
-  <link href="Styles/bootstrap.min.css" rel="stylesheet" type="text/css" />
-  <link href="Styles/swiper.min.css" rel="stylesheet" type="text/css" />
-  <link href="Styles/animate.min.css" rel="stylesheet" type="text/css" />
-  <link href="Styles/video-js.min.css" rel="stylesheet" type="text/css" />
-  <link href="Styles/lightbox.min.css" rel="stylesheet" type="text/css" />
-  <link href="Styles/jplayer.blue.monday.min.css" rel="stylesheet" type="text/css" />
-  <link href="Styles/app.css" rel="stylesheet" type="text/css" />
+    <meta charset="utf-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>沙河口城市配送中心</title>
+    <link href="Styles/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+    <link href="Styles/swiper.min.css" rel="stylesheet" type="text/css"/>
+    <link href="Styles/animate.min.css" rel="stylesheet" type="text/css"/>
+    <link href="Styles/video-js.min.css" rel="stylesheet" type="text/css"/>
+    <link href="Styles/lightbox.min.css" rel="stylesheet" type="text/css"/>
+    <link href="Styles/jplayer.blue.monday.min.css" rel="stylesheet" type="text/css"/>
+    <link href="Styles/app.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
-  <div class="page  tdc-detail">
+<div class="page  tdc-detail">
     <div class="container">
-      <div class="logo"> <img src="./images/tdc_logo.png"> </div>
-      <div class="row" id="zlogo">
-        <div class="col-md-4"></div>
-        <div class="col-md-4"><img src="./images/tdc_head.png"></div>
-        <div class="col-md-4"></div>
-      </div>
+        <div class="logo"><img src="./images/tdc_logo.png"></div>
+        <div class="row" id="zlogo">
+            <div class="col-md-4"></div>
+            <div class="col-md-4"><img src="./images/tdc_head.png"></div>
+            <div class="col-md-4"></div>
+        </div>
     </div>
 
     <div class="main">
-      <div class="main-content">
+        <div class="main-content">
 
-        <div class="row" id="wlsp">
-          <div class="col-md-3 leftpart">
-            <div class="titlepart">
-              <h3>沙河口<br/>城市配送中心</h3>
-              <img src="./images/tiao_03.png" style="margin: 0 0 50px;">
-            </div>
-            <div class=" bodypart">
-              <p class="desc typing-ani">
-                <span class="text">位于大连市沙河口区中长街3号的沙河口城市配送中心，占地面积4万平方米，拥有常温仓储库5座、铁路专用线两条，主要经营矿泉水、粮油、服装等城市快消品的仓储配送业务。</span>
-                </span>
-              </p>
-            </div>
-          </div>
-          <div class="col-md-9 rightpart" >
-            <div class="titlepart">
-            </div>
-            <div id="image_list" class=" bodypart">
-              <div class="grid" style="display:none;">
-                <a href="images/tdc3/i3_s.png" data-lightbox="lightbox" > <img src="./images/tdc3/i3_s.png" class=" width-1-2"> </a>
-                <div class=" width-2-2">
-                  <a href="images/tdc3/i4_s.png" data-lightbox="lightbox" ><img src="./images/tdc3/i4_s.png"> </a>
-                  <div style="margin-top: 16px">
-                    <a href="images/tdc3/i1_s.png" data-lightbox="lightbox" ><img src="./images/tdc3/i1_s.png" class="width-1-2"> </a>
-                    <a href="images/tdc3/i2_s.png" data-lightbox="lightbox" ><img src="./images/tdc3/i2_s.png" class="width-2-2"> </a>
-                  </div>
-
+            <div class="row" id="wlsp">
+                <div class="col-md-3 leftpart">
+                    <div class="titlepart">
+                        <h3>沙河口<br/>城市配送中心</h3>
+                        <img src="./images/tiao_03.png" style="margin: 0 0 50px;">
+                    </div>
+                    <div class=" bodypart">
+                        <p class="desc typing-ani">
+                            <span class="text">位于大连市沙河口区中长街3号的沙河口城市配送中心，占地面积4万平方米，拥有常温仓储库5座、铁路专用线两条，主要经营矿泉水、粮油、服装等城市快消品的仓储配送业务。</span>
+                            </span>
+                        </p>
+                    </div>
                 </div>
-              </div>
-              <div class="swiper swiper-container">
-                <div class="swiper-wrapper">
-                  <div class="swiper-slide">	<img src="images/tdc3/i1.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/tdc3/i2.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/tdc3/i3.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/tdc3/i4.jpg">	</div>
+                <div class="col-md-9 rightpart">
+                    <div class="titlepart">
+                    </div>
+                    <div id="image_list" class=" bodypart">
+                        <div class="grid" style="display:none;">
+                            <!--<a href="images/tdc3/i3_s.png" data-lightbox="lightbox"> <img src="./images/tdc3/i3_s.png"-->
+                                                                                          <!--class=" width-1-2"> </a>-->
+                            <div class=" width-2-2">
+                                <a href="images/tdc3/i4_s.png" data-lightbox="lightbox"><img
+                                        src="./images/tdc3/i4_s.png"> </a>
+                                <div style="margin-top: 16px">
+                                    <a href="images/tdc3/i1_s.png" data-lightbox="lightbox"><img
+                                            src="./images/tdc3/i1_s.png"> </a>
+                                </div>
+                            </div>
+                            <div class=" width-2-2">
+                                <a href="images/tdc3/i4_s.png" data-lightbox="lightbox"><img
+                                        src="./images/tdc3/i4_s.png"> </a>
+                                <div style="margin-top: 16px">
+                                    <a href="images/tdc3/i1_s.png" data-lightbox="lightbox"><img
+                                            src="./images/tdc3/i1_s.png" class="width-1-2"> </a>
+                                    <a href="images/tdc3/i2_s.png" data-lightbox="lightbox"><img
+                                            src="./images/tdc3/i2_s.png" class="width-2-2"> </a>
+                                </div>
+
+                            </div>
+                        </div>
+                        <div class="swiper swiper-container">
+                            <div class="swiper-wrapper">
+                                <div class="swiper-slide"><img src="images/tdc3/i1.jpg"></div>
+                                <div class="swiper-slide"><img src="images/tdc3/i2.jpg"></div>
+                                <div class="swiper-slide"><img src="images/tdc3/i3.jpg"></div>
+                                <div class="swiper-slide"><img src="images/tdc3/i4.jpg"></div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-              </div>
+
+
             </div>
-          </div>
-
-
         </div>
-      </div>
     </div>
 
     <nav id="footer" class="  navbar navbar-default navbar-fixed-bottom">
-      <div class="content">
-        <div class="col-md-3 leftpart">
-          <a class="play-video-btn ctl_btn" href="javascript:void(0)" data-toggle="modal" data-target="#myModal" >
-            <span class="glyphicon glyphicon-film" aria-hidden="true"></span>
-            <span>		视频 </span>
-          </a>
-        </div>
+        <div class="content">
+            <div class="col-md-3 leftpart">
+                <a class="play-video-btn ctl_btn" href="javascript:void(0)" data-toggle="modal" data-target="#myModal">
+                    <span class="glyphicon glyphicon-film" aria-hidden="true"></span>
+                    <span>		视频 </span>
+                </a>
+            </div>
 
-        <div class="col-md-9 rightpart" >
-          <div class="pull-right">
-            <a class="back-btn ctl_btn" href="javascript:void(0)" onclick="javascript:window.history.back();"> 返回 </a>
-            <a class="back-home-btn ctl_btn" href="index.html"> 主页  </a>
-            <a class="play-audio-btn ctl_btn" href="javascript:void(0)"><span class="glyphicon glyphicon-volume-up" aria-hidden="true"></span> </a>
-            <audio id="audio-js" autoplay="true" class="audio-js">
-              <source src="audios/tdc3.ogg" type="audio/ogg" />
-            </audio>
-          </div>
+            <div class="col-md-9 rightpart">
+                <div class="pull-right">
+                    <a class="back-btn ctl_btn" href="javascript:void(0)" onclick="javascript:window.history.back();">
+                        返回 </a>
+                    <a class="back-home-btn ctl_btn" href="index.html"> 主页 </a>
+                    <a class="play-audio-btn ctl_btn" href="javascript:void(0)"><span
+                            class="glyphicon glyphicon-volume-up" aria-hidden="true"></span> </a>
+                    <audio id="audio-js" autoplay="true" class="audio-js">
+                        <source src="audios/tdc3.ogg" type="audio/ogg"/>
+                    </audio>
+                </div>
+            </div>
         </div>
-      </div>
     </nav>
 
     <!-- Modal -->
     <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <div class="clearfix">
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span></button>
-          </div>
-          <div class="modal-body">
-            <video class="video-js" data-setup='{"controls": true, "autoplay": false, "preload": "auto", "fluid": true}'>
-              <source src="videos/sample.webm" type="video/webm"/>
-            </video>
-          </div>
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="clearfix">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                            class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span></button>
+                </div>
+                <div class="modal-body">
+                    <video class="video-js"
+                           data-setup='{"controls": true, "autoplay": false, "preload": "auto", "fluid": true}'>
+                        <source src="videos/sample.webm" type="video/webm"/>
+                    </video>
+                </div>
+            </div>
         </div>
-      </div>
     </div>
 
-  </div>
-  <script src="scripts/jquery-1.9.1.min.js"></script>
-  <script src="scripts/bootstrap.min.js"></script>
-  <script src="scripts/jquery.jplayer.min.js"></script>
-  <script src="scripts/swiper.jquery.min.js"></script>
-  <script src="scripts/swiper.animate.min.js"></script>
-  <script src="scripts/video.min.js"></script>
-  <script src="scripts/lightbox.min.js"></script>
-  <script src="scripts/typing-animate.js"></script>
-  <script src="scripts/app.js"></script>
+</div>
+<script src="scripts/jquery-1.9.1.min.js"></script>
+<script src="scripts/bootstrap.min.js"></script>
+<script src="scripts/jquery.jplayer.min.js"></script>
+<script src="scripts/swiper.jquery.min.js"></script>
+<script src="scripts/swiper.animate.min.js"></script>
+<script src="scripts/video.min.js"></script>
+<script src="scripts/lightbox.min.js"></script>
+<script src="scripts/typing-animate.js"></script>
+<script src="scripts/app.js"></script>
 </body>
 </html>
